mmedu/fw/atlonic/.metadata/.plugins/org.eclipse.cdt.ui/przerwania2.build.log
11:12:39 **** Incremental Build of configuration Debug for project przerwania2 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m4 -mfloat-abi=hard -mfpu=fpv4-sp-d16 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32F303xE -I../Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc -I../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F3xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\main.o ..\Src\main.c 
..\Src\main.c: In function 'main':
..\Src\main.c:111:8: error: 'GPIO_Pin' undeclared (first use in this function)
     if(GPIO_Pin == x7_Pin){
        ^~~~~~~~
..\Src\main.c:111:8: note: each undeclared identifier is reported only once for each function it appears in

11:12:39 Build Finished (took 705ms)

